# http2-traffic-injector

./: .gitignore  CMakeLists.txt  README.md
cmake/: googletest-download.cmake  googletest.cmake
docs/moms/: Tutorship 1.md  preliminary_requisites.md
docs/project-proposal/: document.tex  structure.tex
docs/project-proposal/diagrams/: top-view.puml
docs/project-proposal/tex/: content.tex
src/: Adder.cpp  Adder.h  CMakeLists.txt  main.cpp
src/pocs/: .gitignore  CMakeLists.txt  parser.cc  parser.hh  reader.cpp
src/pocs/json_parser/: CMakeLists.txt
src/pocs/json_parser/config/: config.hh
src/pocs/json_parser/parser/: parser.cc  parser.hh
src/pocs/json_parser/templates/: error.hh
src/pocs/nlohmann-json/: CMakeLists.txt  config.json  reader.cpp
src/pocs/nlohmann-json/parser/: parser.cc
test/: AdderTest.cpp  CMakeLists.txt
